fix image on card not centered

--- a/src/components/Card/index.module.css
+++ b/src/components/Card/index.module.css
@@ -25,6 +25,7 @@
   position: relative;
   text-align: center;
   min-height: 160px;
+  width: 100%;
 }
 
 .image {
